# SmartRoutine

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/: acceptor.h  address.h  endpoint.h  epoll_item.h  resolver.h  smart_coro.h  smart_epoller.h  smart_routine.h  smart_runtime.h  smart_thread.h  smart_timer.h  tcp_socket.h  timer_item.h
include/common/: bounded_queue.h  buffer.h  const_buffer.h  dynamic_buffer.h  error_code.h  mutable_buffer.h
include/internal/: libcontext.h  smart_routine_impl.h
src/: CMakeLists.txt  acceptor.cpp  address.cpp  endpoint.cpp  epoll_item.cpp  smart_coro.cpp  smart_epoller.cpp  smart_routine.cpp  smart_runtime.cpp  smart_thread.cpp  smart_timer.cpp  tcp_socket.cpp
src/common/: buffer.cpp  dynamic_buffer.cpp
src/internal/: libcontext.cpp  smart_routine_impl.cpp
